Use BTM's TransactionManagerServices to get the TM instance instead of creating one ourselves. This ensures there's only a single instance of BTM and allows things like spring to get/use the same TM if necessary.
git-svn-id: http://svn.topazproject.org/svn/head@5784 48088309-b40f-0410-b149-b14953253675